Improve Bukkit multi version support